--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,7 +9,11 @@
     tools:context="com.crusherd.speedportinfo.MainActivity">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:clipChildren="true"
+        android:fadeScrollbars="true"
+        android:scrollbarAlwaysDrawVerticalTrack="false">
         <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -241,14 +245,24 @@
         </TableLayout>
     </ScrollView>
     <Button
+        android:id="@+id/buttonRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:clickable="true"
+        android:longClickable="false"
+        android:onClick="refreshContent"
+        android:text="@string/button_refresh"
+        android:visibility="visible"/>
+    <Button
         android:id="@+id/buttonReconnect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
         android:text="@string/button_reconnect"
         android:visibility="invisible"/>
 </RelativeLayout>
